# mce-lib-vsphere

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
demo-terraform/: README.md  main.tf  terraform.tfvars  variables.tf  vsphere-provider.tf
mce_lib_vsphere/: _version.py  core.py  exceptions.py
mce_lib_vsphere/pytest/: plugin.py
tests/: conftest.py  mock_server.py  test_core.py
