[metadata]
license_files = LICENSE

[bdist_wheel]
universal=1

[tool:pytest]
testpaths = tests
addopts = -p no:warnings --strict-markers --cov=mce_lib_vsphere --cov-branch

[coverage:run]
source = mce_lib_vsphere
omit =
    mce_lib_vsphere/pytest/*
    mce_lib_vsphere/_version.py

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[flake8]
max-line-length = 127

[versioneer]
VCS = git
style = pep440
versionfile_source = mce_lib_vsphere/_version.py
versionfile_build = mce_lib_vsphere/_version.py
tag_prefix =
parentdir_prefix = mce-lib-vsphere-

